Center header content and add body padding

--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
     </ul>
   </aside>
   <header>
-    <ul>
+    <ul class="regional-stories header-details">
       <li>Local</li>
       <li>National</li>
       <li>World</li>
     </ul>
     <h1>The Lone Gunmen Liberator</h1>
-    <ul>
+    <ul class="header-details">
       <li>$.99</li>
       <li>Free on Sundays</li>
       <li>www.lonegunmen.com</li>
